--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         <div class="max-widht">
             <div class="logo"><a href="#">LAIBA</a></div>
             <ul class="menu">
-                <li><a class="active" href="#portfolio.html">About Me</a></li>
+                <li><a class="active" href="portfolio.html">About Me</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="projects.html">Projects</a></li>
