--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
             color: crimson;
     
         }
-        .active{
+        .navbar .menu li a.active{
             color: crimson;
         }
         .about{
@@ -119,7 +119,7 @@
             color: palevioletred;
         }
         .icons{
-            color: crimson ;
+            color: white ;
         }
         .foot{
             background-color: black;
